<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameStatusActivity" >

    <Button
        android:id="@+id/achievements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="30dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:paddingTop="30dp"
        android:text="@string/achievements" />

    <Button
        android:id="@+id/playersNearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/achievements"
        android:layout_alignParentLeft="true"
        android:paddingBottom="30dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="30dp"
        android:text="@string/playersNearby" />

    <TextView
        android:id="@+id/lastKilledText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currentScoreText"
        android:layout_alignLeft="@+id/currentScoreText"
        android:layout_marginBottom="22dp"
        android:text="@string/lastKilled"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lastHungText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lastKilledText"
        android:layout_alignRight="@+id/lastKilledText"
        android:layout_marginBottom="20dp"
        android:text="@string/lastHung"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/playerKilled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lastKilledText"
        android:layout_alignBottom="@+id/lastKilledText"
        android:layout_alignLeft="@+id/playerHung"
        android:text="@string/playerKilled"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentScoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/kill"
        android:layout_centerVertical="true"
        android:text="@string/currentScoreText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/playerKilled"
        android:text="@string/currentScore"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/vote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/achievements"
        android:layout_alignParentRight="true"
        android:paddingBottom="30dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="30dp"
        android:text="@string/vote" />

    <TextView
        android:id="@+id/playerHung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lastHungText"
        android:layout_alignBottom="@+id/lastHungText"
        android:layout_toRightOf="@+id/playersNearby"
        android:text="@string/playerHung"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
